Wed Jan 17 22:53:22 UTC 2007  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * NEWS:
        * docs/transport_current/index.html:

          Updated the documentation on how to disable the
          Transport::Current functionality.

        * MPC/config/taodefaults.mpb:

          Added a "feature(!transport_current)..." to help enable and
          disable the Transport::Current features (and footprint impact).

        * MPC/config/tc.mpb:

          Projects inheriting from this will get "requires += transport_current"

        * tao/TC.mpc:
        * tao/TC_IIOP.mpc:

          Added "requires += transport_current"

        * tao/orbconf.h:

          Fixing a macro re-definition when "transport_current=0" is
          present in default.features.


Wed Jan 17 18:16:18 UTC 2007  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * tao/Transport.h:
        * tao/Transport.inl:
        * tao/Transport.cpp:
        * tao/TransportCurrent/Current_Impl.h:
        * tao/TransportCurrent/Current_Impl.cpp:
        * tao/TransportCurrent/Current_Loader.h:
        * tao/TransportCurrent/Current_Loader.cpp:
        * tao/TransportCurrent/IIOP_Current_Impl.h:
        * tao/TransportCurrent/IIOP_Current_Impl.cpp:
        * tao/TransportCurrent/IIOP_Current_Loader.h:
        * tao/TransportCurrent/IIOP_Current_Loader.cpp:
        * tests/TransportCurrent/IIOP/client.cpp:
        * tests/TransportCurrent/IIOP/server.cpp:

          Updated to prevent any footprint impact when
          Transport::Current functionality is disabled
          (TAO_HAS_TRANSPORT_CURRENT is 0 or undefined)

Wed Jan 17 16:05:42 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/orbsvcs/Notify/Properties.h:
        * orbsvcs/orbsvcs/Notify/Properties.cpp:

          Provide a method to set the properties instance.  If the
          properties instance is not set by the user, a singleton instance
          will be used.

        * orbsvcs/Notify_Service/Notify_Server.cpp:
